[workspace]
members = [
    "exercises/rust/hello-world",
    "exercises/rust/reverse-string",
    "exercises/rust/gigasecond",
    "exercises/rust/clock",
    "exercises/rust/anagram",
    "exercises/rust/space-age",
    "exercises/rust/sublist",
    "exercises/rust/minesweeper",
    "exercises/rust/luhn",
    "exercises/rust/parallel-letter-frequency",
    "exercises/rust/macro",
]
